# gcp-genai-certificate

./: .gitignore  .gitmodules  README.md  pyproject.toml  start_jupyter.sh
genai_cert/encoder-decoder-architecture/: notes.md  text_generation.ipynb
